--- a/jacareview/package.json
+++ b/jacareview/package.json
@@ -37,9 +37,17 @@
     "react-toastify": "^9.1.3",
     "react-use": "^17.4.1",
     "slick-carousel": "^1.8.1",
+    "vite": "^5.0.12",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@babel/plugin-transform-async-generator-functions": "^7.23.7",
+    "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.4",
+    "@babel/plugin-transform-numeric-separator": "^7.23.4",
+    "@babel/plugin-transform-object-rest-spread": "^7.23.4",
+    "@babel/plugin-transform-optional-catch-binding": "^7.23.4",
+    "@babel/plugin-transform-optional-chaining": "^7.23.4",
     "@testing-library/dom": "^9.3.3",
     "@testing-library/react": "^14.1.2",
     "@types/node": "^20",
@@ -55,6 +63,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5",
+    "uglify-js": "^3.17.4",
     "vitest": "^1.1.0"
   }
 }
